--- a/INFERNO/index.html
+++ b/INFERNO/index.html
@@ -5,21 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="raiva.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
 
     <header>
-        <h1>Mia lojinha</h1>
-        <a class="linkcabecalho" href="">placeholder</a>
-        <a class="linkcabecalho" href="">placeholder</a>
-        <a class="linkcabecalho" href="">placeholder</a>
+        <h1>cafeteria</h1>
+        <a href="https://classroom.google.com/u/1/c/NjU1NTcyNTczNzQ3/a/Njg1MTYwNzYwODUz/details?hl=pt-BR">Saber mais</a>
+        <a href="https://store.steampowered.com/app/914800/Coffee_Talk/">Inspiraçao da loja</a>
+        <a href="https://github.com/Filipe-marcelino?tab=repositories">Outros sites</a>
+        <hr>
     </header>
     
     <ul>
-        <li> <span class="spantom">produto1</span> <img src="" alt=""> <button>comprar</button></li>
-        <li> <span class="spantom">produto2</span> <img src="" alt=""> <button>comprar</button></li>
-        <li> <span class="spantom">produto3</span> <img src="" alt=""> <button>comprar</button></li>
+        <li><img src="imgs/Cappuccino.jfif" height="130px" width="150px"> Capuccino 
+            <span class="name"><button>comprar</button></span></li>
+        <li><img src="imgs/Dark Chocolate.jfif" height="130px" width="150px"> Café preto 
+            <span class="name"><button>comprar</button></span></li>
+        <li><img src="imgs/Green Tea Latte.jfif" height="130x" width="150px"> Chá verde Latte 
+            <span class="vender"></span><button>comprar</button></li>
     </ul>
 </body>
 </html>
